[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rl-hmm"
version = "0.2.1"
description = "RL-HMM Trading System: Reinforcement Learning with Hidden Markov Models for Financial Trading"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["trading", "reinforcement-learning", "hmm", "hidden-markov-model", "machine-learning", "quantitative-trading"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Office/Business :: Financial :: Investment",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.0.0",
    "xgboost>=1.5.0",
    "joblib>=1.1.0",
    "matplotlib>=3.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]
gym = [
    "gym>=0.26.0",
    "stable-baselines3>=1.5.0",
    "tensorboard>=2.9.0",
]
all = [
    "gym>=0.26.0",
    "stable-baselines3>=1.5.0",
    "tensorboard>=2.9.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/rl-hmm"
Documentation = "https://github.com/yourusername/rl-hmm#readme"
Repository = "https://github.com/yourusername/rl-hmm"
Issues = "https://github.com/yourusername/rl-hmm/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["rl_hmm*"]

[tool.setuptools.package-data]
rl_hmm = ["py.typed"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
