[metadata]
name = rl-hmm
version = attr: rl_hmm.__version__
description = RL-HMM Trading System for Quantitative Trading
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/yourusername/rl-hmm
author = Your Name
author_email = your.email@example.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Office/Business :: Financial :: Investment
python_requires = >=3.8
install_requires =
    numpy>=1.20.0
    pandas>=1.3.0
    scikit-learn>=1.0.0
    xgboost>=1.5.0
    joblib>=1.1.0
    matplotlib>=3.4.0

[options.packages.find]
where = .
include = rl_hmm*

[options.extras_require]
gym =
    gym>=0.26.0
    stable-baselines3>=1.5.0
    tensorboard>=2.9.0
dev =
    pytest>=7.0.0
    pytest-cov>=3.0.0
    black>=22.0.0
    flake8>=4.0.0
